--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,18 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/react": "^4.0.0",
     "@astrojs/tailwind": "^5.1.3",
+    "@hookform/resolvers": "^3.9.1",
     "@types/react": "^18.3.14",
     "@types/react-dom": "^18.3.3",
     "astro": "^4.16.16",
+    "dotenv": "^16.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.0",
+    "sonner": "^1.7.1",
     "tailwindcss": "^3.4.16",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
