--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,13 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/react": "^4.1.0",
     "@astrojs/tailwind": "^5.1.3",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
     "astro": "^4.16.16",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2"
   },
